objects/EUR_CRM_SAP_Integration__mdt.object
<CustomObject>
    <description>CMT for SAP Integration Setting.</description>
    <fields>
        <fullName>EUR_CRM_Autonumber_Format__c</fullName>
        <label>Autonumber Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Order_Record_Type__c</fullName>
        <label>Sales Order Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAP Integration</label>
    <pluralLabel>SAP Integrations</pluralLabel>
</CustomObject>